# numpy_numba

./: README.md  pyproject.toml  run-test.sh
src/similarity/: __init__.py  calculate_cosine_similarity.py
tests/: test_similarity.py
